--- a/clarusway/css/margins-padding.html
+++ b/clarusway/css/margins-padding.html
@@ -4,9 +4,20 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>margin-pedding</title>
 </head>
 <body>
     
+<h1>Margin pedding</h1>
+
+<div class="containeer">
+
+<div class="div">box1</div>
+<div class="div">box2</div>
+<div class="div">box3</div>
+
+
+
+</div>
 </body>
 </html>
