--- a/clarus(self)way/JAVA/PRECLASS-1.HTML
+++ b/clarus(self)way/JAVA/PRECLASS-1.HTML
@@ -8,5 +8,13 @@
 </head>
 <body>
     
+<SCRIPT>
+
+console.log("Reinvent Yourself");
+document.write("Reinvent Yourself")
+window.alert("Reinvent Yourself")
+</SCRIPT>
+
+
 </body>
 </html>
