--- a/JavaScript/Aritmetic Operators/conditions/index1.html
+++ b/JavaScript/Aritmetic Operators/conditions/index1.html
@@ -4,11 +4,11 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>OPERATORS</title>
+    <title>Conditions</title>
 </head>
 <body style="background-color: black;">
-    <H1 style="color: cornflowerblue; background-color: rgb(9, 50, 36); text-align: center;">OPERATORS</H1>
+    <H1 style="color: cornflowerblue; background-color: rgb(9, 50, 36); text-align: center;">CONDITIONS</H1>
     
-    <script src="operators.js"></script>
+    <script src="conditions.js"></script>
 </body>
 </html>
