--- a/Assignments/JS-ODEVLER/JS- ASS 1/4 ISLEM HESAP MAKINASI/index.html
+++ b/Assignments/JS-ODEVLER/JS- ASS 1/4 ISLEM HESAP MAKINASI/index.html
@@ -8,6 +8,6 @@
   </head>
   <body style="background-color: black;">
 
-    <script:src="solutions,js"></script:src>
+    <script src="solutions.js"></script>
   </body>
 </html>
