--- a/HTML-CSS/html-css_1/index.html
+++ b/HTML-CSS/html-css_1/index.html
@@ -4,11 +4,10 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>OPERATORS</title>
+    <title>Document</title>
+    <link rel="stylesheet" href="index.css">
 </head>
-<body style="background-color: black;">
-    <H1 style="color: cornflowerblue; background-color: rgb(9, 50, 36); text-align: center;">OPERATORS</H1>
+<body>
     
-    <script src="operators.js"></script>
 </body>
 </html>
